--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 spring.sql.init.mode=always
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/online_store
+spring.datasource.url=jdbc:postgresql://localhost:5432/store
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 jwt_secret=SECRET
