--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/store
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.test.driverClassName=org.h2.Driver
+spring.datasource.test.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
+spring.datasource.test.username=test
+spring.datasource.test.password=test
 jwt_secret=SECRET
