--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   client-backend:
-    container_name: store-server
+    image: client:0.0.1
     build:
       context: .
       dockerfile: Dockerfile
