--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-spring.application.name=online-store
-spring.jpa.hibernate.ddl-auto=update
+spring.application.name=store
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
 spring.sql.init.mode=always
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/store
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.prod.driverClassName=org.postgresql.Driver
+spring.datasource.prod.url=jdbc:postgresql://localhost:5432/store
+spring.datasource.prod.username=postgres
+spring.datasource.prod.password=postgres
 spring.datasource.test.driverClassName=org.h2.Driver
 spring.datasource.test.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=PostgreSQL
 spring.datasource.test.username=test
